exports[`transform transforms a file properly 1`] = `
"({\"Object.<anonymous>\":function(module,exports,require,__dirname,__filename,global,jest){module.exports = \"banana\";
}});"
`;

exports[`transform transforms a file properly 2`] = `
"({\"Object.<anonymous>\":function(module,exports,require,__dirname,__filename,global,jest){module.exports = () => \"kiwi\";
}});"
`;

exports[`transform uses the supplied preprocessor 1`] = `
"({\"Object.<anonymous>\":function(module,exports,require,__dirname,__filename,global,jest){
          const TRANSFORMED = {
            filename: \'/fruits/banana.js\',
            script: \'module.exports = \"banana\";\',
            config: \'{\"cache\":true,\"cacheDirectory\":\"/cache/\",\"name\":\"test\",\"preprocessorIgnorePatterns\":[\"/node_modules/\"],\"scriptPreprocessor\":\"test-preprocessor\"}\',
          };
        
}});"
`;

exports[`transform uses the supplied preprocessor 2`] = `
"({\"Object.<anonymous>\":function(module,exports,require,__dirname,__filename,global,jest){module.exports = \"react\";
}});"
`;
